--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,6 +24,8 @@
         <form id="survey" action="POST">
             <label for="name">Your name</label>
             <input name="name" type="text">
+            <label for="pic">Link to a picture of you</label>
+            <input name="pic" type="text">
             <ol>
                 <div id="q1">
                     <li>I believe men and women should have the same rights.</li>
@@ -308,8 +310,22 @@
             </ol>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-      
     </main>
+    <div class="modal" id="friendModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Modal body text goes here.</p>
+                </div>
+              </div>
+            </div>
+          </div>
 
 </body>
 
@@ -324,20 +340,21 @@
         };
         var newResponse = {
             name: $("#survey [name='name']").val(),
+            pic: $("#survey [name='pic']").val(),
             answers: answerArray
         };
 
         console.log(newResponse);
 
-//CHECK WHAT NEEDS TO GO AS URL
-        $.ajax("/survey", {
+        $.ajax("/api/friends", {
             type: "POST",
             data: newResponse
         }).then(
-            function () {
+            function(response) {
                 console.log("Responses added");
-              
-                location.reload();
+                console.log("Most compatible:");
+                console.log(response);
+                $('#friendModal').modal("toggle");
             }
         );
     });
