--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,16 +10,31 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Compatibility survey</title>
 </head>
 
 <body>
     <main class="container">
+            <div class="modal text-center" id="friendModal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header text-center">
+                                <h5 class="modal-title">Your results</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p><span id="compatiblePerson"></p>
+                                <img id="picture" />
+                                <p><span id="compatibility"></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         <h2>Help us find your match!</h2>
         <form id="survey" action="POST">
             <label for="name">Your name</label>
@@ -311,21 +326,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </main>
-    <div class="modal" id="friendModal" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <p>Modal body text goes here.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
 </body>
 
@@ -334,6 +335,7 @@
 <script type="text/javascript">
     $("#survey").on("submit", function (event) {
         event.preventDefault();
+        console.log("Picture link: " + $("#survey [name='pic']").val());
         var answerArray = [];
         for (i = 1; i < 11; i++) {
             answerArray.push($("#survey [name='q" + [i] + "']:checked").val());
@@ -349,14 +351,15 @@
         $.ajax("/api/friends", {
             type: "POST",
             data: newResponse
-        }).then(
-            function(response) {
+        }).then(function (response) {
                 console.log("Responses added");
                 console.log("Most compatible:");
                 console.log(response);
-                $('#friendModal').modal("toggle");
-            }
-        );
+                $("#compatiblePerson").text("Your most compatible match is " + response.name + "!");
+                $("#picture").attr("src", response.pic);
+                $("#compatibility").text("Based on your answers, you two are " + response.compatibility + "% compatible!");
+                $("#friendModal").modal("show");
+            });
     });
 
 
