--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,62 +11,64 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <title>Compatibility survey</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <title>FriendFinder - compatibility survey</title>
 </head>
 
 <body>
-    <main class="container">
-            <div class="modal text-center" id="friendModal" tabindex="-1" role="dialog">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header text-center">
-                                <h5 class="modal-title">Your results</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <p><span id="compatiblePerson"></p>
-                                <img id="picture" />
-                                <p><span id="compatibility"></span></p>
-                            </div>
-                        </div>
+    <main class="container p-5 content-center">
+        <div class="modal text-center" id="friendModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title">Your results</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p><span id="compatiblePerson"></p>
+                        <img id="picture" />
+                        <p><span id="compatibility"></span></p>
                     </div>
                 </div>
+            </div>
+        </div>
         <h2>Help us find your match!</h2>
         <form id="survey" action="POST">
             <label for="name">Your name</label>
-            <input name="name" type="text">
+            <input name="name" type="text" required>
             <label for="pic">Link to a picture of you</label>
-            <input name="pic" type="text">
+            <input name="pic" type="text" required>
             <ol>
                 <div id="q1">
                     <li>I believe men and women should have the same rights.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q1" type="radio" id="1" value="1" />
+                            <input name="q1" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q1" type="radio" id="2" value="2" />
+                            <input name="q1" type="radio" id="2" value="2" required />
                             2</label>
                     </div>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q1" type="radio" id="3" value="3" />
+                            <input name="q1" type="radio" id="3" value="3" required />
                             3</label>
                     </div>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q1" type="radio" id="4" value="4" />
+                            <input name="q1" type="radio" id="4" value="4" required />
                             4</label>
                     </div>
                     <div class="questioninline">
                         <label>
-                            <input name="q1" type="radio" id="5" value="5" />
+                            <input name="q1" type="radio" id="5" value="5" required />
                             5 (Agree 100%)</label>
                     </div>
                 </div>
@@ -74,7 +76,7 @@
                     <li>I like dogs.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q2" type="radio" id="1" value="1" />
+                            <input name="q2" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -102,7 +104,7 @@
                     <li>Hannah Gadsby's "Nanette" is a defining work of our time</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q3" type="radio" id="1" value="1" />
+                            <input name="q3" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -130,7 +132,7 @@
                     <li>I like learning new things.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q4" type="radio" id="1" value="1" />
+                            <input name="q4" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -158,7 +160,7 @@
                     <li>I like cats.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q5" type="radio" id="1" value="1" />
+                            <input name="q5" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -186,7 +188,7 @@
                     <li>I like to go out drinking and partying with my friends.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q6" type="radio" id="1" value="1" />
+                            <input name="q6" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -214,7 +216,7 @@
                     <li>I think Donald Trump is making the US worse.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q7" type="radio" id="1" value="1" />
+                            <input name="q7" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -242,7 +244,7 @@
                     <li>I am a tidy person.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q8" type="radio" id="1" value="1" />
+                            <input name="q8" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -270,7 +272,7 @@
                     <li>I like to travel.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q9" type="radio" id="1" value="1" />
+                            <input name="q9" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -298,7 +300,7 @@
                     <li>I like to exercise.</li>
                     <div class="questioninline pr-3">
                         <label>
-                            <input name="q10" type="radio" id="1" value="1" />
+                            <input name="q10" type="radio" id="1" value="1" required />
                             1 (Disagree 100%)</label>
                     </div>
                     <div class="questioninline pr-3">
@@ -335,7 +337,6 @@
 <script type="text/javascript">
     $("#survey").on("submit", function (event) {
         event.preventDefault();
-        console.log("Picture link: " + $("#survey [name='pic']").val());
         var answerArray = [];
         for (i = 1; i < 11; i++) {
             answerArray.push($("#survey [name='q" + [i] + "']:checked").val());
@@ -346,20 +347,22 @@
             answers: answerArray
         };
 
-        console.log(newResponse);
-
         $.ajax("/api/friends", {
             type: "POST",
             data: newResponse
         }).then(function (response) {
-                console.log("Responses added");
-                console.log("Most compatible:");
-                console.log(response);
+            if (response.firstCandidate == true) {
+                $("#compatiblePerson").text("You're the first person to answer!");
+                $("#picture").attr("src", response.pic);
+                $("#compatibility").text("Someone will match with you soon; in the meantime, enjoy your own company!");
+                $("#friendModal").modal("show");
+            } else {
                 $("#compatiblePerson").text("Your most compatible match is " + response.name + "!");
                 $("#picture").attr("src", response.pic);
                 $("#compatibility").text("Based on your answers, you two are " + response.compatibility + "% compatible!");
                 $("#friendModal").modal("show");
-            });
+            }
+        });
     });
 
 
